--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -5243,19 +5243,19 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 
 
 //传说对决
-USER-AGENT,kgtw*,PROXY
-DOMAIN-SUFFIX,garena.com,PROXY
+USER-AGENT,kgtw*,DIRECT
+DOMAIN-SUFFIX,garena.com,DIRECT
 //Google
 DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
 DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
-DOMAIN-SUFFIX,goo.gl,选择Google的Policy，不知就不选,force-remote-dns
-DOMAIN-SUFFIX,youtu.be,选择Google的Policy，不知就不选,force-remote-dns
-DOMAIN-SUFFIX,ytimg.com,选择Google的Policy，不知就不选,force-remote-dns
-DOMAIN-SUFFIX,ggpht.com,选择Google的Policy，不知就不选,force-remote-dns
-DOMAIN-KEYWORD,gmail,选择Google的Policy，不知就不选,force-remote-dns
-DOMAIN-KEYWORD,google,选择Google的Policy，不知就不选,force-remote-dns
-DOMAIN-KEYWORD,gstatic,选择Google的Policy，不知就不选,force-remote-dns
-DOMAIN-KEYWORD,youtube,选择Google的Policy，不知就不选,force-remote-dns
+DOMAIN-SUFFIX,goo.gl,选择Google的Policy，不知就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,youtu.be,选择Google的Policy，不知就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,ytimg.com,选择Google的Policy，不知就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,ggpht.com,选择Google的Policy，不知就选DIRECT,force-remote-dns
+DOMAIN-KEYWORD,gmail,选择Google的Policy，不知就选DIRECT,force-remote-dns
+DOMAIN-KEYWORD,google,选择Google的Policy，不知就选DIRECT,force-remote-dns
+DOMAIN-KEYWORD,gstatic,选择Google的Policy，不知就选DIRECT,force-remote-dns
+DOMAIN-KEYWORD,youtube,选择Google的Policy，不知就选DIRECT,force-remote-dns
 // Microsoft
 USER-AGENT,Microsoft*,选择微软服务的Policy，不知就选择DIRECT
 USER-AGENT,OneDrive*,选择微软服务的Policy，不知就选择DIRECT
@@ -5321,22 +5321,22 @@ IP-CIDR,198.38.0.0/12,选择Netflix的Policy，不知就不选,no-resolve
 IP-CIDR,198.45.0.0/12,选择Netflix的Policy，不知就不选,no-resolve
 
 // Client
-PROCESS-NAME,Backup and Sync,PROXY
-PROCESS-NAME,Day One,PROXY
-PROCESS-NAME,Dropbox,PROXY
-PROCESS-NAME,node-webkit,PROXY
-PROCESS-NAME,Telegram,PROXY
-PROCESS-NAME,Tweetbot,PROXY
-PROCESS-NAME,Twitter,PROXY
+PROCESS-NAME,Backup and Sync,DIRECT
+PROCESS-NAME,Day One,DIRECT
+PROCESS-NAME,Dropbox,DIRECT
+PROCESS-NAME,node-webkit,DIRECT
+PROCESS-NAME,Telegram,DIRECT
+PROCESS-NAME,Tweetbot,DIRECT
+PROCESS-NAME,Twitter,DIRECT
 
 // UA
-USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
-USER-AGENT,*Telegram*,PROXY
-USER-AGENT,Coinbase*,PROXY
-USER-AGENT,Instagram*,PROXY
-USER-AGENT,Resilio Sync*,PROXY
-USER-AGENT,SoundCloud*,PROXY
-USER-AGENT,WhatsApp*,PROXY
+USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,DIRECT
+USER-AGENT,*Telegram*,DIRECT
+USER-AGENT,Coinbase*,DIRECT
+USER-AGENT,Instagram*,DIRECT
+USER-AGENT,Resilio Sync*,DIRECT
+USER-AGENT,SoundCloud*,DIRECT
+USER-AGENT,WhatsApp*,DIRECT
 
 
 
@@ -5925,10 +5925,10 @@ IP-CIDR,113.61.104.0/22,DIRECT,no-resolve
 IP-CIDR,27.0.236.0/22,DIRECT,no-resolve
 
 // Client
-PROCESS-NAME,Paws for Trello,DIRECT
-PROCESS-NAME,Thunder,DIRECT
-PROCESS-NAME,trustd,DIRECT
-PROCESS-NAME,WeChat,DIRECT
+PROCESS-NAME,Paws for Trello,PROXY
+PROCESS-NAME,Thunder,PROXY
+PROCESS-NAME,trustd,PROXY
+PROCESS-NAME,WeChat,PROXY
 
 // UA
 USER-AGENT, %E4%BA%AC%E4%B8%9C%E5%88%B0%E5%AE%B6*,PROXY
@@ -6257,7 +6257,7 @@ IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.0.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 
-// Detect local network
+// Detect China network
 GEOIP,CN,PROXY
 // Use Proxy for all others
 FINAL,DIRECT
