--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,14 +1,12 @@
-# 2018年4月9日 02:11
+# 2018年4月9日 15:06
 
 [SERVER]
-
 
 
 [SOURCE]
 
 
 [BACKUP-SERVER]
-
 
 
 [PROJECTION]
@@ -71,7 +69,7 @@ DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 
 
-# https://github.com/lhie1/Surge/blob/master/Shadowrocket.conf
+# https://github.com/lhie1/Rules/blob/master/Shadowrocket.conf
 
 # Yahoo Weather
 DOMAIN,m.yap.yahoo.com,REJECT
@@ -5954,9 +5952,12 @@ USER-AGENT,WeChat*,PROXY
 
 # PROXY
 
+DOMAIN-SUFFIX,10000.com,PROXY
+DOMAIN-SUFFIX,10086.cn,PROXY
 DOMAIN-SUFFIX,12306.com,PROXY
 DOMAIN-SUFFIX,126.net,PROXY
 DOMAIN-SUFFIX,163.com,PROXY
+DOMAIN-SUFFIX,189.cn,PROXY
 DOMAIN-SUFFIX,360.cn,PROXY
 DOMAIN-SUFFIX,360.com,PROXY
 DOMAIN-SUFFIX,360buy.com,PROXY
@@ -5979,6 +5980,7 @@ DOMAIN-SUFFIX,amap.com,PROXY
 DOMAIN-SUFFIX,analytics.126.net,PROXY
 DOMAIN-SUFFIX,apache.org,PROXY
 DOMAIN-SUFFIX,appstore.com,PROXY
+DOMAIN-SUFFIX,autohome.com.cn,PROXY
 DOMAIN-SUFFIX,autonavi.com,PROXY
 DOMAIN-SUFFIX,bababian.com,PROXY
 DOMAIN-SUFFIX,baidu.com,PROXY
@@ -6032,6 +6034,7 @@ DOMAIN-SUFFIX,hao123.com,PROXY
 DOMAIN-SUFFIX,haosou.com,PROXY
 DOMAIN-SUFFIX,hdslb.com,PROXY
 DOMAIN-SUFFIX,hdslb.net,PROXY
+DOMAIN-SUFFIX,hiwifi.com,PROXY
 DOMAIN-SUFFIX,hollisterco.com,PROXY
 DOMAIN-SUFFIX,hongxiu.com,PROXY
 DOMAIN-SUFFIX,hxcdn.net,PROXY
