--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -6182,12 +6182,12 @@ IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 
 DOMAIN-SUFFIX,cn,PROXY
 
-// Accelerate PROXY sites
-DOMAIN-KEYWORD,torrent,PROXY
-URL-REGEX,ed2k*,PROXY
-URL-REGEX,magnet*,PROXY
+// Accelerate DIRECT sites
+DOMAIN-KEYWORD,torrent,DIRECT
+URL-REGEX,ed2k*,DIRECT
+URL-REGEX,magnet*,DIRECT
 URL-REGEX,*(360|so)\.(cn|com),PROXY
-URL-REGEX,(torrent|*\.torrent|peer_id=*|announce|info_hash|get_peers|find_node|BitTorrent|announce_peer|protocol|*\.php\?passkey=*),PROXY
+URL-REGEX,(torrent|*\.torrent|peer_id=*|announce|info_hash|get_peers|find_node|BitTorrent|announce_peer|protocol|*\.php\?passkey=*),DIRECT
 
 DOMAIN-KEYWORD,amazon,DIRECT,force-remote-dns
 DOMAIN-KEYWORD,appledaily,DIRECT,force-remote-dns
