--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -5243,17 +5243,6 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 //传说对决
 USER-AGENT,kgtw*,DIRECT
 DOMAIN-SUFFIX,garena.com,DIRECT
-//Google
-DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
-DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
-DOMAIN-SUFFIX,goo.gl,选择Google的Policy，不知就选DIRECT,force-remote-dns
-DOMAIN-SUFFIX,youtu.be,选择Google的Policy，不知就选DIRECT,force-remote-dns
-DOMAIN-SUFFIX,ytimg.com,选择Google的Policy，不知就选DIRECT,force-remote-dns
-DOMAIN-SUFFIX,ggpht.com,选择Google的Policy，不知就选DIRECT,force-remote-dns
-DOMAIN-KEYWORD,gmail,选择Google的Policy，不知就选DIRECT,force-remote-dns
-DOMAIN-KEYWORD,google,选择Google的Policy，不知就选DIRECT,force-remote-dns
-DOMAIN-KEYWORD,gstatic,选择Google的Policy，不知就选DIRECT,force-remote-dns
-DOMAIN-KEYWORD,youtube,选择Google的Policy，不知就选DIRECT,force-remote-dns
 // Microsoft
 USER-AGENT,Microsoft*,选择微软服务的Policy，不知就选择DIRECT
 USER-AGENT,OneDrive*,选择微软服务的Policy，不知就选择DIRECT
@@ -5337,8 +5326,19 @@ USER-AGENT,SoundCloud*,DIRECT
 USER-AGENT,WhatsApp*,DIRECT
 
 
-
 # DIRECT
+
+//Google
+DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
+DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
+DOMAIN-SUFFIX,goo.gl,DIRECT,force-remote-dns
+DOMAIN-SUFFIX,youtu.be,DIRECT,force-remote-dns
+DOMAIN-SUFFIX,ytimg.com,DIRECT,force-remote-dns
+DOMAIN-SUFFIX,ggpht.com,DIRECT,force-remote-dns
+DOMAIN-KEYWORD,gmail,DIRECT,force-remote-dns
+DOMAIN-KEYWORD,google,DIRECT,force-remote-dns
+DOMAIN-KEYWORD,gstatic,DIRECT,force-remote-dns
+DOMAIN-KEYWORD,youtube,DIRECT,force-remote-dns
 
 // Steam
 DOMAIN-SUFFIX,fanatical,DIRECT
@@ -5947,7 +5947,6 @@ USER-AGENT,TeamViewer*,PROXY
 USER-AGENT,TIM*,PROXY
 USER-AGENT,WebTorrent*,PROXY
 USER-AGENT,WeChat*,PROXY
-
 
 
 # PROXY
