--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,5 @@
-# 2018年4月9日 15:06
+# 2018年4月9日 20:12 UTC/GMT +9
+# https://github.com/lhie1/Rules/blob/master/Shadowrocket.conf
 
 [SERVER]
 
@@ -68,8 +69,6 @@ DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT
 
 
-
-# https://github.com/lhie1/Rules/blob/master/Shadowrocket.conf
 
 # Yahoo Weather
 DOMAIN,m.yap.yahoo.com,REJECT
