--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,6 @@
-# 2018年4月9日 21:00 UTC/GMT +9
+# 2018年4月14日 02:00 UTC/GMT +9
+
+#【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action。找到选项，左滑选择【Replace】，然后【OK】。
 
 [SERVER]
 
@@ -48,6 +50,7 @@ USER-AGENT,Maps*,DIRECT
 USER-AGENT,PassbookUIService*,DIRECT
 USER-AGENT,passd*,DIRECT
 USER-AGENT,seld*,DIRECT
+USER-AGENT,trustd*,DIRECT
 USER-AGENT,Wallet*,DIRECT
 //Siri
 USER-AGENT,AssistantServices*,DIRECT
@@ -501,7 +504,6 @@ DOMAIN-SUFFIX,wwis-dubc1-vip60.adobe.com,REJECT
 
 // Ali
 DOMAIN-SUFFIX,a.alimama.cn,REJECT
-DOMAIN-SUFFIX,acjs.aliyun.com,REJECT
 DOMAIN-SUFFIX,acookie.alimama.com,REJECT
 DOMAIN-SUFFIX,acs4baichuan.m.taobao.com,REJECT
 DOMAIN-SUFFIX,adash.m.taobao.com,REJECT
@@ -529,7 +531,6 @@ DOMAIN-SUFFIX,banner.alimama.com,REJECT
 DOMAIN-SUFFIX,bm.alimama.cn,REJECT
 DOMAIN-SUFFIX,bmvip.alimama.cn,REJECT
 DOMAIN-SUFFIX,c.alimama.com,REJECT
-DOMAIN-SUFFIX,c-adash.m.taobao.com,REJECT
 DOMAIN-SUFFIX,cb.alimama.cn,REJECT
 DOMAIN-SUFFIX,cdn-ads.oss-cn-shanghai.aliyuncs.com,REJECT
 DOMAIN-SUFFIX,cpc.click.alimama.com,REJECT
@@ -540,7 +541,6 @@ DOMAIN-SUFFIX,dressimage.img-cn-beijing.aliyuncs.com,REJECT
 DOMAIN-SUFFIX,fs-uc-nearme-com-cn.oss-cn-hangzhou.aliyuncs.com,REJECT
 DOMAIN-SUFFIX,gen.alicdn.com,REJECT
 DOMAIN-SUFFIX,gma.alicdn.com,REJECT
-DOMAIN-SUFFIX,hydra.alibaba.com,REJECT
 DOMAIN-SUFFIX,img.alimama.cn,REJECT
 DOMAIN-SUFFIX,img-dsp.oss-cn-beijing.aliyuncs.com,REJECT
 DOMAIN-SUFFIX,ipinyou.com,REJECT
@@ -582,6 +582,7 @@ DOMAIN-SUFFIX,yiliao.hupan.com,REJECT
 
 // Apple
 DOMAIN-SUFFIX,adserver.unityads.unity3d.com,REJECT
+DOMAIN-SUFFIX,config.unityads.unity3d.com,REJECT
 DOMAIN-SUFFIX,iadsdk.apple.com,REJECT
 
 // Auto home
@@ -765,6 +766,7 @@ DOMAIN-SUFFIX,push.zhangyue.com,REJECT
 DOMAIN-SUFFIX,s1.cmfu.com,REJECT
 DOMAIN-SUFFIX,sanya1.com,REJECT
 DOMAIN-SUFFIX,sc.shayugg.com,REJECT
+DOMAIN-SUFFIX,sezvc.com,REJECT
 DOMAIN-SUFFIX,tjlog.easou.com,REJECT
 DOMAIN-SUFFIX,tjlog.ps.easou.com,REJECT
 DOMAIN-SUFFIX,tongji.qidian.com,REJECT
@@ -1172,7 +1174,6 @@ DOMAIN-SUFFIX,mcgi.v.qq.com,REJECT
 DOMAIN-SUFFIX,mdevstat.qqlive.qq.com,REJECT
 DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,mini2015.qq.com,REJECT
-DOMAIN-SUFFIX,mobile.qzone.qq.com,REJECT
 DOMAIN-SUFFIX,monitor.uu.qq.com,REJECT
 DOMAIN-SUFFIX,mqqad.cs0309.html5.qq.com,REJECT
 DOMAIN-SUFFIX,mqqad.html5.qq.com,REJECT
@@ -1201,10 +1202,6 @@ DOMAIN-SUFFIX,q.i.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,qqshow2-item.qq.com,REJECT
 DOMAIN-SUFFIX,qss-client.qq.com,REJECT
 DOMAIN-SUFFIX,recmd.html5.qq.com,REJECT
-DOMAIN-SUFFIX,report.huatuo.qq.com,REJECT
-DOMAIN-SUFFIX,report.qcloud.com,REJECT
-DOMAIN-SUFFIX,report.qq.com,REJECT
-DOMAIN-SUFFIX,report.vip.qq.com,REJECT
 DOMAIN-SUFFIX,rh.qq.com,REJECT
 DOMAIN-SUFFIX,rich.qq.com,REJECT
 DOMAIN-SUFFIX,rm.gdt.qq.com,REJECT
@@ -1774,6 +1771,7 @@ DOMAIN-SUFFIX,a.5ykj.com,REJECT
 DOMAIN-SUFFIX,a.80982.org,REJECT
 DOMAIN-SUFFIX,a.ads1.msn.com,REJECT
 DOMAIN-SUFFIX,a.ads2.msn.com,REJECT
+DOMAIN-SUFFIX,a.applovin.com,REJECT
 DOMAIN-SUFFIX,a.armystar.com,REJECT
 DOMAIN-SUFFIX,a.baiy.net,REJECT
 DOMAIN-SUFFIX,a.baomihua.com,REJECT
@@ -1862,6 +1860,7 @@ DOMAIN-SUFFIX,acuityplatform.com,REJECT
 DOMAIN-SUFFIX,acwgf.com,REJECT
 DOMAIN-SUFFIX,acxiom-online.com,REJECT
 DOMAIN-SUFFIX,ad.1111cpc.com,REJECT
+DOMAIN-SUFFIX,ad.12306.cn,REJECT
 DOMAIN-SUFFIX,ad.17173.com,REJECT
 DOMAIN-SUFFIX,ad.3.cn,REJECT
 DOMAIN-SUFFIX,ad.360yield.com,REJECT
@@ -2062,6 +2061,7 @@ DOMAIN-SUFFIX,ads.feedly.com,REJECT
 DOMAIN-SUFFIX,ads.genieessp.com,REJECT
 DOMAIN-SUFFIX,ads.gionee.com,REJECT
 DOMAIN-SUFFIX,ads.gmodules.com,REJECT
+DOMAIN-SUFFIX,ads.heyzap.com,REJECT
 DOMAIN-SUFFIX,ads.mopud.com,REJECT
 DOMAIN-SUFFIX,ads.msn.com,REJECT
 DOMAIN-SUFFIX,ads.newtentionassets.net,REJECT
@@ -2476,6 +2476,7 @@ DOMAIN-SUFFIX,c.netu.tv,REJECT
 DOMAIN-SUFFIX,c.wrating.com,REJECT
 DOMAIN-SUFFIX,c0.ifengimg.com,REJECT
 DOMAIN-SUFFIX,c0563.com,REJECT
+DOMAIN-SUFFIX,c0594.com,REJECT
 DOMAIN-SUFFIX,c0i8h8ac7e.bid,REJECT
 DOMAIN-SUFFIX,c1.4qx.net,REJECT
 DOMAIN-SUFFIX,c1.adform.net,REJECT
@@ -2489,6 +2490,7 @@ DOMAIN-SUFFIX,cacafly.net,REJECT
 DOMAIN-SUFFIX,cache.soloth.com,REJECT
 DOMAIN-SUFFIX,cachead.com,REJECT
 DOMAIN-SUFFIX,cachesit.com,REJECT
+DOMAIN-SUFFIX,cache-ssl.celtra.com,REJECT
 DOMAIN-SUFFIX,cadvv.heraldm.com,REJECT
 DOMAIN-SUFFIX,cadvv.koreaherald.com,REJECT
 DOMAIN-SUFFIX,caiyifz.com,REJECT
@@ -2741,6 +2743,7 @@ DOMAIN-SUFFIX,d0.xcar.com.cn,REJECT
 DOMAIN-SUFFIX,d1ad.com,REJECT
 DOMAIN-SUFFIX,d1grtyyel8f1mh.cloudfront.net,REJECT
 DOMAIN-SUFFIX,d1zgderxoe1a.cloudfront.net,REJECT
+DOMAIN-SUFFIX,d2qkpebv23oowx.cloudfront.net,REJECT
 DOMAIN-SUFFIX,d36eyd5j1kt1m6.cloudfront.net,REJECT
 DOMAIN-SUFFIX,d5nxst8fruw4z.cloudfront.net,REJECT
 DOMAIN-SUFFIX,d5p.de17a.com,REJECT
@@ -3210,6 +3213,7 @@ DOMAIN-SUFFIX,govgift.com,REJECT
 DOMAIN-SUFFIX,govids.net,REJECT
 DOMAIN-SUFFIX,gp.jstv.com,REJECT
 DOMAIN-SUFFIX,gqswg.com,REJECT
+DOMAIN-SUFFIX,graph.facebook.com,REJECT
 DOMAIN-SUFFIX,green.erne.co,REJECT
 DOMAIN-SUFFIX,greenhouseglobal.cn,REJECT
 DOMAIN-SUFFIX,gridsum.com,REJECT
@@ -3418,7 +3422,6 @@ DOMAIN-SUFFIX,img.zuowen8.com,REJECT
 DOMAIN-SUFFIX,img0.egou.com,REJECT
 DOMAIN-SUFFIX,img01.taotaosou.cn,REJECT
 DOMAIN-SUFFIX,img09.zhaopin.com,REJECT
-DOMAIN-SUFFIX,img1.gtimg.com,REJECT
 DOMAIN-SUFFIX,img1.jintang114.org,REJECT
 DOMAIN-SUFFIX,img1.pcfg.cache.wps.cn,REJECT
 DOMAIN-SUFFIX,img18.com,REJECT
@@ -3752,7 +3755,6 @@ DOMAIN-SUFFIX,m.hmzsfmjc.com,REJECT
 DOMAIN-SUFFIX,m.irs01.com,REJECT
 DOMAIN-SUFFIX,m.kubiqq.com,REJECT
 DOMAIN-SUFFIX,m.laojiayoufang.com,REJECT
-DOMAIN-SUFFIX,m.qpic.cn,REJECT
 DOMAIN-SUFFIX,m.reachmax.cn,REJECT
 DOMAIN-SUFFIX,m.rmuqvq.cn,REJECT
 DOMAIN-SUFFIX,m.romgv.com,REJECT
@@ -3817,6 +3819,7 @@ DOMAIN-SUFFIX,mdotm.com,REJECT
 DOMAIN-SUFFIX,mdpjnppsbjv.bid,REJECT
 DOMAIN-SUFFIX,mdrecv.app.cntvwb.cn,REJECT
 DOMAIN-SUFFIX,mealsandsteals.sandiego6.com,REJECT
+DOMAIN-SUFFIX,med.heyzap.com,REJECT
 DOMAIN-SUFFIX,medal.blog.csdn.net,REJECT
 DOMAIN-SUFFIX,media.trafficfactory.biz,REJECT
 DOMAIN-SUFFIX,media8.cn,REJECT
@@ -4228,7 +4231,6 @@ DOMAIN-SUFFIX,qooic.com,REJECT
 DOMAIN-SUFFIX,qq.tapiche.cn,REJECT
 DOMAIN-SUFFIX,qq2.co,REJECT
 DOMAIN-SUFFIX,qq61.com,REJECT
-DOMAIN-SUFFIX,qqadapt.qpic.cn,REJECT
 DOMAIN-SUFFIX,qqhuhu.com,REJECT
 DOMAIN-SUFFIX,qqm98.com,REJECT
 DOMAIN-SUFFIX,qqzu.com,REJECT
@@ -4271,6 +4273,7 @@ DOMAIN-SUFFIX,rad.live.com,REJECT
 DOMAIN-SUFFIX,rad.microsoft.com,REJECT
 DOMAIN-SUFFIX,rad.msn.com,REJECT
 DOMAIN-SUFFIX,radar.cedexis.com,REJECT
+DOMAIN-SUFFIX,rayjump.com,REJECT
 DOMAIN-SUFFIX,rbp.emea.mxptint.net,REJECT
 DOMAIN-SUFFIX,rbp.mxptint.net,REJECT
 DOMAIN-SUFFIX,rbywg.com,REJECT
@@ -4360,6 +4363,7 @@ DOMAIN-SUFFIX,s.l8l9.com,REJECT
 DOMAIN-SUFFIX,s.wrating.com,REJECT
 DOMAIN-SUFFIX,s.ysxufeng.com,REJECT
 DOMAIN-SUFFIX,s.zixuntop.com,REJECT
+DOMAIN-SUFFIX,s0.2mdn.net,REJECT
 DOMAIN-SUFFIX,s1.hiapk.com,REJECT
 DOMAIN-SUFFIX,s1.qiuyi.cn,REJECT
 DOMAIN-SUFFIX,s400cc.com,REJECT
@@ -4962,6 +4966,7 @@ DOMAIN-SUFFIX,x.adpro.cn,REJECT
 DOMAIN-SUFFIX,x.castanet.net,REJECT
 DOMAIN-SUFFIX,x.cnxad.com,REJECT
 DOMAIN-SUFFIX,x.eroticity.net,REJECT
+DOMAIN-SUFFIX,x.heyzap.com,REJECT
 DOMAIN-SUFFIX,x.jd.com,REJECT
 DOMAIN-SUFFIX,x.ligatus.com,REJECT
 DOMAIN-SUFFIX,x.vipergirls.to,REJECT
@@ -5101,7 +5106,6 @@ DOMAIN-SUFFIX,yin1.zgpingshu.com,REJECT
 DOMAIN-SUFFIX,yinhaijuan.com,REJECT
 DOMAIN-SUFFIX,yinooo.com,REJECT
 DOMAIN-SUFFIX,yinyuehu.cn,REJECT
-DOMAIN-SUFFIX,yiqifa.com,REJECT
 DOMAIN-SUFFIX,yiranxian.cn,REJECT
 DOMAIN-SUFFIX,yiwk.com,REJECT
 DOMAIN-SUFFIX,yiwuds.com,REJECT
@@ -5241,69 +5245,70 @@ DOMAIN-SUFFIX,zzsx8.com,REJECT
 //传说对决
 USER-AGENT,kgtw*,DIRECT
 DOMAIN-SUFFIX,garena.com,DIRECT
+
 // Microsoft
-USER-AGENT,Microsoft*,选择微软服务的Policy，不知就选择DIRECT
-USER-AGENT,OneDrive*,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-KEYWORD,microsoft,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,bing.com,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,bing.net,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,docs.com,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,hotmail.com,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,live.com,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,live.net,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,microsoft.com,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,msn.com,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,office.com,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,office.net,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,office365.com,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,onedrive.com,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,onenote.com,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,onenote.net,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,outlook.com,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,windows.com,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,windows.net,选择微软服务的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,windowsupdate.com,选择微软服务的Policy，不知就选择DIRECT
+USER-AGENT,Microsoft*,选择微软服务的Policy，不懂就选择DIRECT
+USER-AGENT,OneDrive*,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-KEYWORD,microsoft,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,bing.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,bing.net,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,docs.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,hotmail.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,live.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,live.net,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,microsoft.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,msn.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,office.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,office.net,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,office365.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,onedrive.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,onenote.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,onenote.net,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,outlook.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,windows.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,windows.net,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,windowsupdate.com,选择微软服务的Policy，不懂就选择DIRECT
 //PayPal
-USER-AGENT,PayPal*,选择PayPal的Policy，不知就选择DIRECT
-DOMAIN-KEYWORD,paypal,选择PayPal的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,paypal.com,选择PayPal的Policy，不知就选择DIRECT
+USER-AGENT,PayPal*,选择PayPal的Policy，不懂就选择DIRECT
+DOMAIN-KEYWORD,paypal,选择PayPal的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,paypal.com,选择PayPal的Policy，不懂就选择DIRECT
 //Apple
-IP-CIDR,17.0.0.0/8,选择Apple的Policy，不知就选择DIRECT,no-resolve
-DOMAIN,appleiphonecell.com,选择Apple的Policy，不知就选择DIRECT
-USER-AGENT,AppStore*,选择Apple的Policy，不知就选择DIRECT
-DOMAIN-KEYWORD,icloud,选择Apple的Policy，不知就选择DIRECT
-DOMAIN-KEYWORD,itunes,选择Apple的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,aaplimg.com,选择Apple的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,apple.co,选择Apple的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,apple.com,选择Apple的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,appsto.re,选择Apple的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,选择Apple的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,me.com,选择Apple的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,mzstatic.com,选择Apple的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,icloud.com,选择Apple的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,icloud-content.com,选择Apple的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,itunes.com,选择Apple的Policy，不知就选择DIRECT
-DOMAIN-SUFFIX,itunes-apple.com.akadns.net,选择Apple的Policy，不知就选择DIRECT
+IP-CIDR,17.0.0.0/8,选择Apple的Policy，不懂就选择DIRECT,no-resolve
+DOMAIN,appleiphonecell.com,选择Apple的Policy，不懂就选择DIRECT
+USER-AGENT,AppStore*,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-KEYWORD,icloud,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-KEYWORD,itunes,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,aaplimg.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,apple.co,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,apple.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,appsto.re,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,cdn-apple.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,me.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,mzstatic.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,icloud.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,icloud-content.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,itunes.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,itunes-apple.com.akadns.net,选择Apple的Policy，不懂就选择DIRECT
 //Netflix
-USER-AGENT,Argo*,选择Netflix的Policy，不知就不选
-DOMAIN-SUFFIX,netflix.com,选择Netflix的Policy，不知就不选
-DOMAIN-SUFFIX,netflix.net,选择Netflix的Policy，不知就不选
-DOMAIN-SUFFIX,nflxso.net,选择Netflix的Policy，不知就不选
-DOMAIN-SUFFIX,nflxext.com,选择Netflix的Policy，不知就不选
-DOMAIN-SUFFIX,nflximg.com,选择Netflix的Policy，不知就不选
-DOMAIN-SUFFIX,nflximg.net,选择Netflix的Policy，不知就不选
-DOMAIN-SUFFIX,nflxvideo.net,选择Netflix的Policy，不知就不选
-IP-CIDR,23.246.0.0/12,选择Netflix的Policy，不知就不选,no-resolve
-IP-CIDR,37.77.0.0/12,选择Netflix的Policy，不知就不选,no-resolve
-IP-CIDR,45.57.0.0/12,选择Netflix的Policy，不知就不选,no-resolve
-IP-CIDR,64.120.128.0/17,选择Netflix的Policy，不知就不选,no-resolve
-IP-CIDR,66.197.128.0/17,选择Netflix的Policy，不知就不选,no-resolve
-IP-CIDR,108.175.0.0/12,选择Netflix的Policy，不知就不选,no-resolve
-IP-CIDR,185.2.0.0/12,选择Netflix的Policy，不知就不选,no-resolve
-IP-CIDR,185.9.188.0/22,选择Netflix的Policy，不知就不选,no-resolve
-IP-CIDR,192.173.64.0/18,选择Netflix的Policy，不知就不选,no-resolve
-IP-CIDR,198.38.0.0/12,选择Netflix的Policy，不知就不选,no-resolve
-IP-CIDR,198.45.0.0/12,选择Netflix的Policy，不知就不选,no-resolve
+USER-AGENT,Argo*,选择Netflix的Policy，不懂就不选
+DOMAIN-SUFFIX,netflix.com,选择Netflix的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,netflix.net,选择Netflix的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,nflxso.net,选择Netflix的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,nflxext.com,选择Netflix的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,nflximg.com,选择Netflix的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,nflximg.net,选择Netflix的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,nflxvideo.net,选择Netflix的Policy，不懂就选择DIRECT
+IP-CIDR,23.246.0.0/12,选择Netflix的Policy，不懂就选择DIRECT,no-resolve
+IP-CIDR,37.77.0.0/12,选择Netflix的Policy，不懂就选择DIRECT,no-resolve
+IP-CIDR,45.57.0.0/12,选择Netflix的Policy，不懂就选择DIRECT,no-resolve
+IP-CIDR,64.120.128.0/17,选择Netflix的Policy，不懂就选择DIRECT,no-resolve
+IP-CIDR,66.197.128.0/17,选择Netflix的Policy，不懂就选择DIRECT,no-resolve
+IP-CIDR,108.175.0.0/12,选择Netflix的Policy，不懂就选择DIRECT,no-resolve
+IP-CIDR,185.2.0.0/12,选择Netflix的Policy，不懂就选择DIRECT,no-resolve
+IP-CIDR,185.9.188.0/22,选择Netflix的Policy，不懂就选择DIRECT,no-resolve
+IP-CIDR,192.173.64.0/18,选择Netflix的Policy，不懂就选择DIRECT,no-resolve
+IP-CIDR,198.38.0.0/12,选择Netflix的Policy，不懂就选择DIRECT,no-resolve
+IP-CIDR,198.45.0.0/12,选择Netflix的Policy，不懂就选择DIRECT,no-resolve
 
 // Client
 PROCESS-NAME,Backup and Sync,DIRECT
@@ -5322,6 +5327,7 @@ USER-AGENT,Instagram*,DIRECT
 USER-AGENT,Resilio Sync*,DIRECT
 USER-AGENT,SoundCloud*,DIRECT
 USER-AGENT,WhatsApp*,DIRECT
+
 
 
 # DIRECT
@@ -5344,6 +5350,10 @@ DOMAIN-SUFFIX,humblebundle.com,DIRECT
 DOMAIN-SUFFIX,steamcommunity.com,DIRECT
 DOMAIN-SUFFIX,steampowered.com,DIRECT
 DOMAIN-SUFFIX,steamstatic.com,DIRECT
+
+// Epicgames
+DOMAIN-KEYWORD,epicgames,DIRECT,force-remote-dns
+DOMAIN-SUFFIX,helpshift.com,DIRECT,force-remote-dns
 
 // Line
 DOMAIN-SUFFIX,lin.ee,DIRECT
@@ -5536,6 +5546,7 @@ DOMAIN-SUFFIX,gstatic.com,DIRECT
 DOMAIN-SUFFIX,gunsamerica.com,DIRECT
 DOMAIN-SUFFIX,gvt0.com,DIRECT
 DOMAIN-SUFFIX,helpshift.com,DIRECT
+DOMAIN-SUFFIX,hinet.net,DIRECT
 DOMAIN-SUFFIX,hockeyapp.net,DIRECT
 DOMAIN-SUFFIX,homedepot.com,DIRECT
 DOMAIN-SUFFIX,hootsuite.com,DIRECT
@@ -5927,7 +5938,7 @@ PROCESS-NAME,trustd,PROXY
 PROCESS-NAME,WeChat,PROXY
 
 // UA
-USER-AGENT, %E4%BA%AC%E4%B8%9C%E5%88%B0%E5%AE%B6*,PROXY
+USER-AGENT,%E4%BA%AC%E4%B8%9C%E5%88%B0%E5%AE%B6*,PROXY
 USER-AGENT,%E5%8D%B3%E5%88%BB*,PROXY
 USER-AGENT,*Vainglory* ,PROXY
 USER-AGENT,AdBlock*,PROXY
@@ -5947,14 +5958,20 @@ USER-AGENT,WebTorrent*,PROXY
 USER-AGENT,WeChat*,PROXY
 
 
+
 # PROXY
 
 DOMAIN-SUFFIX,10010.com,PROXY
 DOMAIN-SUFFIX,10086.cn,PROXY
+DOMAIN-SUFFIX,189.cn,PROXY
+DOMAIN-SUFFIX,autohome.com.cn,PROXY
+DOMAIN-SUFFIX,smartisan.com,PROXY
+DOMAIN-SUFFIX,umetrip.com,PROXY
+DOMAIN-SUFFIX,yiche.com,PROXY
+
 DOMAIN-SUFFIX,12306.com,PROXY
 DOMAIN-SUFFIX,126.net,PROXY
 DOMAIN-SUFFIX,163.com,PROXY
-DOMAIN-SUFFIX,189.cn,PROXY
 DOMAIN-SUFFIX,360.cn,PROXY
 DOMAIN-SUFFIX,360.com,PROXY
 DOMAIN-SUFFIX,360buy.com,PROXY
@@ -5977,7 +5994,6 @@ DOMAIN-SUFFIX,amap.com,PROXY
 DOMAIN-SUFFIX,analytics.126.net,PROXY
 DOMAIN-SUFFIX,apache.org,PROXY
 DOMAIN-SUFFIX,appstore.com,PROXY
-DOMAIN-SUFFIX,autohome.com.cn,PROXY
 DOMAIN-SUFFIX,autonavi.com,PROXY
 DOMAIN-SUFFIX,bababian.com,PROXY
 DOMAIN-SUFFIX,baidu.com,PROXY
@@ -6031,7 +6047,6 @@ DOMAIN-SUFFIX,hao123.com,PROXY
 DOMAIN-SUFFIX,haosou.com,PROXY
 DOMAIN-SUFFIX,hdslb.com,PROXY
 DOMAIN-SUFFIX,hdslb.net,PROXY
-DOMAIN-SUFFIX,hiwifi.com,PROXY
 DOMAIN-SUFFIX,hollisterco.com,PROXY
 DOMAIN-SUFFIX,hongxiu.com,PROXY
 DOMAIN-SUFFIX,hxcdn.net,PROXY
@@ -6100,6 +6115,7 @@ DOMAIN-SUFFIX,rarbg.to,PROXY
 DOMAIN-SUFFIX,rrmj.tv,PROXY
 DOMAIN-SUFFIX,ruguoapp.com,PROXY
 DOMAIN-SUFFIX,sandai.net,PROXY
+DOMAIN-SUFFIX,sf-express.com,PROXY
 DOMAIN-SUFFIX,sinaapp.com,PROXY
 DOMAIN-SUFFIX,sinaimg.cn,PROXY
 DOMAIN-SUFFIX,sinaimg.com,PROXY
@@ -6150,7 +6166,6 @@ DOMAIN-SUFFIX,xiaomicp.com,PROXY
 DOMAIN-SUFFIX,ximalaya.com,PROXY
 DOMAIN-SUFFIX,xitek.com,PROXY
 DOMAIN-SUFFIX,xmcdn.com,PROXY
-DOMAIN-SUFFIX,xn--nos809b.com,PROXY
 DOMAIN-SUFFIX,xslb.net,PROXY
 DOMAIN-SUFFIX,xunlei.com,PROXY
 DOMAIN-SUFFIX,yach.me,PROXY
@@ -6176,6 +6191,10 @@ DOMAIN-SUFFIX,edu.cn,PROXY
 
 // TeamViewer
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
+IP-CIDR,139.220.243.27/32,PROXY,no-resolve
+IP-CIDR,172.16.102.56/32,PROXY,no-resolve
+IP-CIDR,185.188.32.1/28,PROXY,no-resolve
+IP-CIDR,221.226.128.146/32,PROXY,no-resolve
 
 DOMAIN-SUFFIX,cn,PROXY
 
@@ -6195,7 +6214,7 @@ DOMAIN-KEYWORD,instagram,DIRECT,force-remote-dns
 DOMAIN-KEYWORD,twitter,DIRECT,force-remote-dns
 DOMAIN-KEYWORD,twimg,DIRECT,force-remote-dns
 
-// Force some domains which are fucked by GFW while resolving DNS,or do not respect the system Proxy
+// Force some domains which are fucked by GFW while resolving DNS, or do not respect the system DIRECT
 DOMAIN-KEYWORD,appledaily,DIRECT,force-remote-dns
 DOMAIN-KEYWORD,beetalk,DIRECT,force-remote-dns
 DOMAIN-KEYWORD,blogspot,DIRECT,force-remote-dns
@@ -6259,7 +6278,7 @@ IP-CIDR,192.168.0.0/16,DIRECT
 
 // Detect China network
 GEOIP,CN,PROXY
-// Use Proxy for all others
+// Use DIRECT for all others
 FINAL,DIRECT
 
 [GLOBAL]
