--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,4 @@
-# 2018年4月14日 02:00 UTC/GMT +9
+# 2018年4月14日 02:02 UTC/GMT +9
 
 #【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action。找到选项，左滑选择【Replace】，然后【OK】。
 
@@ -5290,7 +5290,7 @@ DOMAIN-SUFFIX,icloud-content.com,选择Apple的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,itunes.com,选择Apple的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,itunes-apple.com.akadns.net,选择Apple的Policy，不懂就选择DIRECT
 //Netflix
-USER-AGENT,Argo*,选择Netflix的Policy，不懂就不选
+USER-AGENT,Argo*,选择Netflix的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,netflix.com,选择Netflix的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,netflix.net,选择Netflix的Policy，不懂就选择DIRECT
 DOMAIN-SUFFIX,nflxso.net,选择Netflix的Policy，不懂就选择DIRECT
