--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,4 @@
-# 2018年4月14日 12:46 UTC/GMT +9
+# 2018年4月15日 15:46 UTC/GMT +9
 
 #【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action。找到选项，左滑选择【Replace】，然后【OK】。
 
@@ -63,7 +63,6 @@ DOMAIN,cn-smp-paymentservices.apple.com,DIRECT
 DOMAIN,smp-device.apple.com,DIRECT
 DOMAIN,smp-device-content.apple.com,DIRECT
 DOMAIN,captive.apple.com,DIRECT
-DOMAIN,e.crashlytics.com,DIRECT
 DOMAIN-SUFFIX,ess.apple.com,DIRECT
 DOMAIN-SUFFIX,push.apple.com,DIRECT
 DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
@@ -5344,7 +5343,7 @@ DOMAIN-KEYWORD,gstatic,DIRECT,force-remote-dns
 DOMAIN-KEYWORD,youtube,DIRECT,force-remote-dns
 
 // Steam
-DOMAIN-SUFFIX,fanatical,DIRECT
+DOMAIN-SUFFIX,fanatical.com,DIRECT
 DOMAIN-SUFFIX,humblebundle.com,DIRECT
 DOMAIN-SUFFIX,steamcommunity.com,DIRECT
 DOMAIN-SUFFIX,steampowered.com,DIRECT
@@ -5738,6 +5737,7 @@ DOMAIN-SUFFIX,symauth.com,DIRECT
 DOMAIN-SUFFIX,symcb.com,DIRECT
 DOMAIN-SUFFIX,symcd.com,DIRECT
 DOMAIN-SUFFIX,t.me,DIRECT
+DOMAIN-SUFFIX,t66y.com,DIRECT
 DOMAIN-SUFFIX,tablesgenerator.com,DIRECT
 DOMAIN-SUFFIX,tabtter.jp,DIRECT
 DOMAIN-SUFFIX,talk853.com,DIRECT
@@ -6244,7 +6244,6 @@ DOMAIN-SUFFIX,gvt1.com,DIRECT,force-remote-dns
 DOMAIN-SUFFIX,gwtproject.org,DIRECT,force-remote-dns
 DOMAIN-SUFFIX,heroku.com,DIRECT,force-remote-dns
 DOMAIN-SUFFIX,html5rocks.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,humblebundle.com,DIRECT,force-remote-dns
 DOMAIN-SUFFIX,keyhole.com,DIRECT,force-remote-dns
 DOMAIN-SUFFIX,kobo.com,DIRECT,force-remote-dns
 DOMAIN-SUFFIX,kobobooks.com,DIRECT,force-remote-dns
