--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -5947,6 +5947,7 @@ DOMAIN-SUFFIX,10010.com,PROXY
 DOMAIN-SUFFIX,10086.cn,PROXY
 DOMAIN-SUFFIX,189.cn,PROXY
 DOMAIN-SUFFIX,autohome.com.cn,PROXY
+DOMAIN-SUFFIX,bitauto.com,PROXY
 DOMAIN-SUFFIX,smartisan.com,PROXY
 DOMAIN-SUFFIX,umetrip.com,PROXY
 DOMAIN-SUFFIX,yiche.com,PROXY
