Sync for lhie1's Quantumult.conf #21

--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,4 @@
-# 2018年4月15日 15:46 UTC/GMT +9
+# 2018年4月17日 14:32 UTC/GMT +9
 
 #【Settings】——【Favorites】——【+】——【Filter】，输入名字（随意，如"Stick Rules"），填上链接地址，勾选Filter Action。找到选项，左滑选择【Replace】，然后【OK】。
 
@@ -541,18 +541,14 @@ DOMAIN-SUFFIX,pics.taobaocdn.com,REJECT
 DOMAIN-SUFFIX,pindao.huoban.taobao.com,REJECT
 DOMAIN-SUFFIX,re.m.taobao.com,REJECT
 DOMAIN-SUFFIX,re.taobao.com,REJECT
-DOMAIN-SUFFIX,redirect.simba.taobao.com,REJECT
 DOMAIN-SUFFIX,rj.m.taobao.co,REJECT
 DOMAIN-SUFFIX,rj.m.taobao.com,REJECT
 DOMAIN-SUFFIX,sdkinit.taobao.com,REJECT
 DOMAIN-SUFFIX,show.re.taobao.com,REJECT
 DOMAIN-SUFFIX,simaba.taobao.com,REJECT
-DOMAIN-SUFFIX,simba.m.taobao.com,REJECT
-DOMAIN-SUFFIX,simba.taobao.com,REJECT
 DOMAIN-SUFFIX,strip.alicdn.com,REJECT
 DOMAIN-SUFFIX,strip.taobaocdn.com,REJECT
 DOMAIN-SUFFIX,temai.taobao.com,REJECT
-DOMAIN-SUFFIX,tns.simba.taobao.com,REJECT
 DOMAIN-SUFFIX,ttjx-online.cn-hangzhou.log.aliyuncs.com,REJECT
 DOMAIN-SUFFIX,tunion-api.m.taobao.com,REJECT
 DOMAIN-SUFFIX,unitacs.m.taobao.com,REJECT
@@ -1107,7 +1103,6 @@ DOMAIN-SUFFIX,c2.l.qq.com,REJECT
 DOMAIN-SUFFIX,ca.gtimg.com,REJECT
 DOMAIN-SUFFIX,canvas.gdt.qq.com,REJECT
 DOMAIN-SUFFIX,cb.l.qq.com,REJECT
-DOMAIN-SUFFIX,cdn.ark.qq.com,REJECT
 DOMAIN-SUFFIX,cfg.imtt.qq.com,REJECT
 DOMAIN-SUFFIX,cgi.connect.qq.com,REJECT
 DOMAIN-SUFFIX,client.show.qq.com,REJECT
@@ -5316,14 +5311,14 @@ USER-AGENT,WhatsApp*,DIRECT
 //Google
 DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
 DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
-DOMAIN-SUFFIX,goo.gl,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,youtu.be,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,ytimg.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,ggpht.com,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,gmail,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,google,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,gstatic,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,youtube,DIRECT,force-remote-dns
+DOMAIN-SUFFIX,goo.gl,DIRECT
+DOMAIN-SUFFIX,youtu.be,DIRECT
+DOMAIN-SUFFIX,ytimg.com,DIRECT
+DOMAIN-SUFFIX,ggpht.com,DIRECT
+DOMAIN-KEYWORD,gmail,DIRECT
+DOMAIN-KEYWORD,google,DIRECT
+DOMAIN-KEYWORD,gstatic,DIRECT
+DOMAIN-KEYWORD,youtube,DIRECT
 
 // Steam
 DOMAIN-SUFFIX,fanatical.com,DIRECT
@@ -5333,13 +5328,13 @@ DOMAIN-SUFFIX,steampowered.com,DIRECT
 DOMAIN-SUFFIX,steamstatic.com,DIRECT
 
 // Epicgames
-DOMAIN-KEYWORD,epicgames,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,helpshift.com,DIRECT,force-remote-dns
+DOMAIN-KEYWORD,epicgames,DIRECT
+DOMAIN-SUFFIX,helpshift.com,DIRECT
 
 // Line
 DOMAIN-SUFFIX,lin.ee,DIRECT
 DOMAIN-SUFFIX,line.me,DIRECT
-DOMAIN-SUFFIX,line.naver.jp,DIRECT,force-remote-dns
+DOMAIN-SUFFIX,line.naver.jp,DIRECT
 DOMAIN-SUFFIX,line-apps.com,DIRECT
 DOMAIN-SUFFIX,line-cdn.net,DIRECT
 DOMAIN-SUFFIX,line-scdn.net,DIRECT
@@ -5508,6 +5503,7 @@ DOMAIN-SUFFIX,gfx.ms,DIRECT
 DOMAIN-SUFFIX,ggpht.com,DIRECT
 DOMAIN-SUFFIX,ghostnoteapp.com,DIRECT
 DOMAIN-SUFFIX,git.io,DIRECT
+DOMAIN-SUFFIX,gitbook.com,DIRECT
 DOMAIN-SUFFIX,github.com,DIRECT
 DOMAIN-SUFFIX,github.io,DIRECT
 DOMAIN-SUFFIX,githubapp.com,DIRECT
@@ -5928,6 +5924,7 @@ USER-AGENT,arrowio*,PROXY
 USER-AGENT,balls*,PROXY
 USER-AGENT,Best%20Trace*,PROXY
 USER-AGENT,cmblife*,PROXY
+USER-AGENT,eusoft_ting_en_iphone,PROXY
 USER-AGENT,hide*,PROXY
 USER-AGENT,MegaWerewolf*,PROXY
 USER-AGENT,MicroMessenger*,PROXY
@@ -5936,9 +5933,9 @@ USER-AGENT,osee2unifiedRelease*,PROXY
 USER-AGENT,QQ*,PROXY
 USER-AGENT,TeamViewer*,PROXY
 USER-AGENT,TIM*,PROXY
+USER-AGENT,ting_en,PROXY
 USER-AGENT,WebTorrent*,PROXY
 USER-AGENT,WeChat*,PROXY
-
 
 
 # PROXY
@@ -5948,6 +5945,7 @@ DOMAIN-SUFFIX,10086.cn,PROXY
 DOMAIN-SUFFIX,189.cn,PROXY
 DOMAIN-SUFFIX,autohome.com.cn,PROXY
 DOMAIN-SUFFIX,bitauto.com,PROXY
+DOMAIN-SUFFIX,ccb.com,PROXY
 DOMAIN-SUFFIX,smartisan.com,PROXY
 DOMAIN-SUFFIX,umetrip.com,PROXY
 DOMAIN-SUFFIX,yiche.com,PROXY
@@ -6023,7 +6021,6 @@ DOMAIN-SUFFIX,fresh-ideas.cc,PROXY
 DOMAIN-SUFFIX,geetest.com,PROXY
 DOMAIN-SUFFIX,godic.net,PROXY
 DOMAIN-SUFFIX,goodread.com,PROXY
-DOMAIN-SUFFIX,google.cn,PROXY
 DOMAIN-SUFFIX,gtimg.com,PROXY
 DOMAIN-SUFFIX,haibian.com,PROXY
 DOMAIN-SUFFIX,hao123.com,PROXY
@@ -6188,67 +6185,67 @@ URL-REGEX,magnet*,DIRECT
 URL-REGEX,*(360|so)\.(cn|com),PROXY
 URL-REGEX,(torrent|*\.torrent|peer_id=*|announce|info_hash|get_peers|find_node|BitTorrent|announce_peer|protocol|*\.php\?passkey=*),DIRECT
 
-DOMAIN-KEYWORD,amazon,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,appledaily,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,blogspot,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,fbcdn,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,facebook,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,instagram,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,twitter,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,twimg,DIRECT,force-remote-dns
+DOMAIN-KEYWORD,amazon,DIRECT
+DOMAIN-KEYWORD,appledaily,DIRECT
+DOMAIN-KEYWORD,blogspot,DIRECT
+DOMAIN-KEYWORD,fbcdn,DIRECT
+DOMAIN-KEYWORD,facebook,DIRECT
+DOMAIN-KEYWORD,instagram,DIRECT
+DOMAIN-KEYWORD,twitter,DIRECT
+DOMAIN-KEYWORD,twimg,DIRECT
 
-// Force some domains which are fucked by GFW while resolving DNS, or do not respect the system DIRECT
-DOMAIN-KEYWORD,appledaily,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,beetalk,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,blogspot,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,dropbox,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,telegram,DIRECT,force-remote-dns
-DOMAIN-KEYWORD,whatsapp,DIRECT,force-remote-dns
+// Force some domains which are fucked by GFW while resolving DIRECT
+DOMAIN-KEYWORD,appledaily,DIRECT
+DOMAIN-KEYWORD,beetalk,DIRECT
+DOMAIN-KEYWORD,blogspot,DIRECT
+DOMAIN-KEYWORD,dropbox,DIRECT
+DOMAIN-KEYWORD,telegram,DIRECT
+DOMAIN-KEYWORD,whatsapp,DIRECT
 
-DOMAIN-SUFFIX,1e100.net,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,2mdn.net,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,abc.xyz,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,akamai.net,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,appspot.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,autodraw.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,bandwagonhost.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,blogblog.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,chromeexperiments.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,creativelab5.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,crittercism.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,culturalspot.org,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,dartlang.org,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,fb.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,fb.me,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,fbcdn.net,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,fbsbx.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,gcr.io,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,gosetsuden.jp,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,gvt1.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,gwtproject.org,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,heroku.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,html5rocks.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,keyhole.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,kobo.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,kobobooks.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,madewithcode.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,material.io,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,messenger.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,netmarble.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,nianticlabs.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,pinimg.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,pixiv.net,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,pubnub.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,t.co,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,tensorflow.org,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,thefacebook.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,toggleable.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,torproject.org,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,twitpic.com,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,unfiltered.news,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,waveprotocol.org,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,webmproject.org,DIRECT,force-remote-dns
-DOMAIN-SUFFIX,webrtc.org,DIRECT,force-remote-dns
+DOMAIN-SUFFIX,1e100.net,DIRECT
+DOMAIN-SUFFIX,2mdn.net,DIRECT
+DOMAIN-SUFFIX,abc.xyz,DIRECT
+DOMAIN-SUFFIX,akamai.net,DIRECT
+DOMAIN-SUFFIX,appspot.com,DIRECT
+DOMAIN-SUFFIX,autodraw.com,DIRECT
+DOMAIN-SUFFIX,bandwagonhost.com,DIRECT
+DOMAIN-SUFFIX,blogblog.com,DIRECT
+DOMAIN-SUFFIX,chromeexperiments.com,DIRECT
+DOMAIN-SUFFIX,creativelab5.com,DIRECT
+DOMAIN-SUFFIX,crittercism.com,DIRECT
+DOMAIN-SUFFIX,culturalspot.org,DIRECT
+DOMAIN-SUFFIX,dartlang.org,DIRECT
+DOMAIN-SUFFIX,fb.com,DIRECT
+DOMAIN-SUFFIX,fb.me,DIRECT
+DOMAIN-SUFFIX,fbcdn.net,DIRECT
+DOMAIN-SUFFIX,fbsbx.com,DIRECT
+DOMAIN-SUFFIX,gcr.io,DIRECT
+DOMAIN-SUFFIX,gosetsuden.jp
+DOMAIN-SUFFIX,gvt1.com,DIRECT
+DOMAIN-SUFFIX,gwtproject.org,DIRECT
+DOMAIN-SUFFIX,heroku.com,DIRECT
+DOMAIN-SUFFIX,html5rocks.com,DIRECT
+DOMAIN-SUFFIX,keyhole.com,DIRECT
+DOMAIN-SUFFIX,kobo.com,DIRECT
+DOMAIN-SUFFIX,kobobooks.com,DIRECT
+DOMAIN-SUFFIX,madewithcode.com,DIRECT
+DOMAIN-SUFFIX,material.io,DIRECT
+DOMAIN-SUFFIX,messenger.com,DIRECT
+DOMAIN-SUFFIX,netmarble.com,DIRECT
+DOMAIN-SUFFIX,nianticlabs.com,DIRECT
+DOMAIN-SUFFIX,pinimg.com,DIRECT
+DOMAIN-SUFFIX,pixiv.net,DIRECT
+DOMAIN-SUFFIX,pubnub.com,DIRECT
+DOMAIN-SUFFIX,t.co,DIRECT
+DOMAIN-SUFFIX,tensorflow.org,DIRECT
+DOMAIN-SUFFIX,thefacebook.com,DIRECT
+DOMAIN-SUFFIX,toggleable.com,DIRECT
+DOMAIN-SUFFIX,torproject.org,DIRECT
+DOMAIN-SUFFIX,twitpic.com,DIRECT
+DOMAIN-SUFFIX,unfiltered.news,DIRECT
+DOMAIN-SUFFIX,waveprotocol.org,DIRECT
+DOMAIN-SUFFIX,webmproject.org,DIRECT
+DOMAIN-SUFFIX,webrtc.org,DIRECT
 
 // LAN,debugging rules should place above this line
 DOMAIN-SUFFIX,local,DIRECT
